@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The rastertodymo driver now supports the Zebra ZPL
+	  language (STR #713)
 	- The test suite no longer generates a printcap file,
 	  which caused problems when testing as the root user
 	  (STR #693)
